export const snapshot = {};

snapshot[`build a site with liquid 1`] = `4`;

snapshot[`build a site with liquid 2`] = `
{
  formats: [
    {
      includesPath: undefined,
      key: ".tmpl.ts",
      pageType: "page",
    },
    {
      includesPath: undefined,
      key: ".tmpl.js",
      pageType: "page",
    },
    {
      includesPath: undefined,
      key: ".tmpl.json",
      pageType: "page",
    },
    {
      includesPath: undefined,
      key: ".json",
      pageType: undefined,
    },
    {
      includesPath: undefined,
      key: ".md",
      pageType: "page",
    },
    {
      includesPath: undefined,
      key: ".js",
      pageType: undefined,
    },
    {
      includesPath: undefined,
      key: ".ts",
      pageType: undefined,
    },
    {
      includesPath: "_includes",
      key: ".njk",
      pageType: "page",
    },
    {
      includesPath: undefined,
      key: ".yaml",
      pageType: "page",
    },
    {
      includesPath: undefined,
      key: ".yml",
      pageType: "page",
    },
    {
      includesPath: "_includes",
      key: ".liquid",
      pageType: "page",
    },
  ],
}
`;

snapshot[`build a site with liquid 3`] = `
{
  content: '\\n["red","green","blue"]\\n',
  data: {
    colors: [
      "red",
      "green",
      "blue",
    ],
    content: "\\n{{ colors | json }}\\n",
    date: 1970-01-01T00:00:00.000Z,
    layout: null,
    paginate: [GeneratorFunction: paginate],
    search: Search {},
    tags: [
    ],
    url: "/data.json",
  },
  dest: {
    ext: ".json",
    path: "/data",
  },
  src: {
    ext: ".liquid",
    path: "/data.json",
  },
}
`;

snapshot[`build a site with liquid 4`] = `
{
  content: '<!DOCTYPE html>\\n\\n<html lang="en">\\n  <head>\\n    <meta charset="utf-8">\\n    <title>Hello World</title>\\n  </head>\\n  <body>\\n    <main>\\n<h1>Hello World</h1>\\n</main>\\n  </body>\\n</html>\\n',
  data: {
    content: "\\n<h1>{{ title }}</h1>\\n",
    date: 1970-01-01T00:00:00.000Z,
    paginate: [GeneratorFunction: paginate],
    search: Search {},
    tags: [
    ],
    title: "Hello World",
    url: "/",
  },
  dest: {
    ext: ".html",
    path: "/index",
  },
  src: {
    ext: ".liquid",
    path: "/index",
  },
}
`;

snapshot[`build a site with liquid 5`] = `
{
  content: '<!DOCTYPE html>\\n\\n<html lang="en">\\n  <head>\\n    <meta charset="utf-8">\\n    <title>liquid filter example</title>\\n  </head>\\n  <body>\\n    <main><h1>LIQUID FILTER EXAMPLE</h1></main>\\n  </body>\\n</html>\\n',
  data: {
    content: undefined,
    date: 1970-01-01T00:00:00.000Z,
    paginate: [GeneratorFunction: paginate],
    search: Search {},
    tags: [
    ],
    title: "liquid filter example",
    url: "/liquid-filter/",
  },
  dest: {
    ext: ".html",
    path: "/liquid-filter/index",
  },
  src: {
    ext: ".tmpl.js",
    path: "/liquid-filter",
  },
}
`;

snapshot[`build a site with liquid 6`] = `
{
  content: '<!DOCTYPE html>\\n\\n<html lang="en">\\n  <head>\\n    <meta charset="utf-8">\\n    <title>The title</title>\\n  </head>\\n  <body>\\n    <main><p><strong>THE TITLE</strong></p>\\n<p><strong>THE TITLE</strong></p>\\n<p><strong>THE TITLE</strong></p>\\n<p><strong>THE TITLE</strong></p>\\n<div>hello (async)</div>\\n\\n<ul>\\n  <li>This is a partial</li>\\n  <li>async helper in a partial (async)</li>\\n</ul>\\n<ul>\\n  <li>This is a partial</li>\\n  <li>async helper in a partial (async)</li>\\n</ul>\\n</main>\\n  </body>\\n</html>\\n',
  data: {
    content: '<p>{% upperCase title %}</p>\\n<p>{% upperCase "The title" %}</p>\\n<p>{% upperCaseAsync title %}</p>\\n<p>{% upperCaseAsync "The title" %}</p>\\n<div>{{ "hello" | returnAsync }}</div>\\n\\n{% include "partial.liquid" %}\\n{% include "./_includes/partial.liquid" %}\\n',
    date: 1970-01-01T00:00:00.000Z,
    paginate: [GeneratorFunction: paginate],
    search: Search {},
    tags: [
    ],
    title: "The title",
    url: "/with-helpers/",
  },
  dest: {
    ext: ".html",
    path: "/with-helpers/index",
  },
  src: {
    ext: ".liquid",
    path: "/with-helpers",
  },
}
`;
